@@ -1,3 +1,6 @@
+20180328:
+	* ezthumb.c: don't display milliseconds in large video clips.
+
 20170625:
 	* ezthumb.c: replaced the video_decode_valided() to video_decode_to()
 	in the two-pass mode in case of running out of key frames in very 
